--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 # Конфигурация приложения
 spring:
+  profiles:
+    active: dev
+    
+  error:
+    wholesale-wildcard-ignoring: true
+  
   # Настройки источника данных (базы данных)
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/postgres}
@@ -42,8 +48,8 @@ spring:
   mail:
     host: ${MAIL_HOST:smtp.gmail.com}
     port: ${MAIL_PORT:587}
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
+    username: ${MAIL_USERNAME:}
+    password: ${MAIL_PASSWORD:}
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
@@ -55,6 +61,14 @@ spring:
 # Настройка порта сервера
 server:
   port: ${SERVER_PORT:8081}
+
+# Базовая конфигурация Telegram бота
+# Детальная конфигурация находится в application-dev.yml
+telegram:
+  enabled: ${TELEGRAM_ENABLED:false}
+  bot:
+    token: ${TG_TOKEN:}
+    name: ${TG_BOT_NAME:}
 
 ## Настройки SMS API (Evolve)
 #sms:
